--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="contact__form">
-                            <h3>Get in touch</h3>
+                            <h3>Contactos</h3>
                             <form action="#">
                                 <input type="text" placeholder="Name">
                                 <input type="text" placeholder="Email">
@@ -616,7 +616,7 @@
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
-                            <h5>Who we are</h5>
+                            <h5>Quienes somos</h5>
                             <ul>
                                 <li><a href="#">Team</a></li>
                                 <li><a href="#">Carrers</a></li>
@@ -627,12 +627,12 @@
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
-                            <h5>Our work</h5>
+                            <h5>Nuestro trabajo</h5>
                             <ul>
-                                <li><a href="#">Feature</a></li>
-                                <li><a href="#">Latest</a></li>
-                                <li><a href="#">Browse Archive</a></li>
-                                <li><a href="#">Video for web</a></li>
+                                <li><a href="#">Lo que hacemos!</a></li>
+                                <li><a href="#">Lo último</a></li>
+                                <li><a href="#">Catálogo Archive</a></li>
+                                <li><a href="#">Videos</a></li>
                             </ul>
                         </div>
                     </div>
@@ -656,8 +656,8 @@
                             <script>
                                 document.write(new Date().getFullYear());
                             </script>
-                            All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                aria-hidden="true"></i> by <a href="https://www.youtube.com" target="_blank">🤖</a>
+                            Todos los derechos reservados | Desarrollado <i class="fa fa-heart-o"
+                                aria-hidden="true"></i> por <a href="https://www.youtube.com" target="_blank">Juan 🤖</a>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
