--- a/index.html
+++ b/index.html
@@ -608,20 +608,18 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
-                            <h5>About us</h5>
-                            <p>Formed in 2006 by Matt Hobbs and Cael Jones, Videoprah is an award-winning, full-service
-                                production company specializing.</p>
-                            <a href="#" class="read__more">Read more <span class="arrow_right"></span></a>
+                            <h5>Sobre nosotros</h5>
+                            <p>Empresa cuencana son una larga trayectoria en realizacion de espectáculos de alta calidad, a si como la grabación de los mismos con tecnología de punta.</p>
+                            <a href="#" class="read__more">Leer mas <span class="arrow_right"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
                             <h5>Quienes somos</h5>
                             <ul>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Carrers</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Locations</a></li>
+                                <li><a href="#">Lo que hacemos!</a></li>
+                                <li><a href="#">Lo último</a></li>
+                            
                             </ul>
                         </div>
                     </div>
@@ -629,9 +627,8 @@
                         <div class="footer__option__item">
                             <h5>Nuestro trabajo</h5>
                             <ul>
-                                <li><a href="#">Lo que hacemos!</a></li>
-                                <li><a href="#">Lo último</a></li>
-                                <li><a href="#">Catálogo Archive</a></li>
+                            
+                                <li><a href="#">Catálogo </a></li>
                                 <li><a href="#">Videos</a></li>
                             </ul>
                         </div>
