--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                     <div class="col-lg-4 col-md-12">
                         <div class="footer__option__item">
                             <h5>Newsletter</h5>
-                            <p>Videoprah is an award-winning, full-service production company specializing.</p>
+                            <p>Especialistas en filmación y edición de eventos, videos aéreos, grabación con drones, 4k.</p>
                             <form action="#">
                                 <input type="text" placeholder="Email">
                                 <button type="submit"><i class="fa fa-send"></i></button>
